completed Filter endpoint as well
