# src/routes/tasks.route.js
@@ -2,13 +2,16 @@ const express = require("express");
 const router = express.Router();
 const {
 createTask,getAllTasks,
-updateTask
+updateTask,
+deleteTask,
+getAllTasksByStatus
 } = require("../controllers/tasks.controller");
 
 router.post("/", createTask);
 router.get("/", getAllTasks);
 router.put("/:id", updateTask);
-router.delete("/:id", updateTask);
+router.delete("/:id", deleteTask);
+router.get("/status/:status", getAllTasksByStatus);
 
 
 // router.get("/:id", getHabitById);
